fix button store gap

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -469,6 +469,7 @@ header#header::after {
     font-weight: bold;
     border-radius: 50px;
     cursor: pointer;
+    margin-top: 1em;
     margin-bottom: 2em;
 }
 
